# bevy_input_prompts

./: .gitignore  Cargo.toml  README.md  build.rs  macro_expansion_temp#  rustfmt.toml
asset_gen/: Cargo.toml
asset_gen/src/: main.rs
assets/bevy_input_prompts/xelu_svg/Xelu_prompts_SVG-1.0/: Readme.md  Readme.txt
coverage/: Cargo.toml
coverage/src/: main.rs
examples/: constraints.rs  coverage.rs  detection.rs  identification.rs  interactive.rs  manual.rs  minimal.rs  minimal_bevy.rs  new.rs  normal.rs  sprite.rs
macro_expansions_temp/: sort_entropy.rs  sort_entropy_all.rs  sort_path_len.rs
macros/: Cargo.toml
macros/src/: fbs_graphs.rs  graph_operations.rs  iter_graphs.rs  lib.rs
src/: char.rs  gamepad_axis.rs  gamepad_brand.rs  gamepad_button.rs  key.rs  key_code.rs  keyboard_input.rs  lib.rs  mouse_button.rs  product_ids.rs  vendor_ids.rs
src/kenney/: gamepad_axis.rs  gamepad_button.rs  key_code.rs  mod.rs  mouse_button.rs
src/kenny/: key_code.rs  mod.rs  mouse_button.rs
src/not_found/: gamepad_axis.rs  gamepad_button.rs  key_code.rs  mod.rs  mouse_button.rs
src/xelu/: gamepad_axis.rs  gamepad_button.rs  key_code.rs  mod.rs  mouse_button.rs  xelu_key_code.rs  xelu_key_code_name.rs  xelu_mouse_button.rs  xelu_mouse_button_name.rs
