[package]
name = "bevy_input_prompts"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "Mappings from bevy input types to popular input prompt asset paths"
homepage = "https://github.com/jonathandw743/bevy_input_prompts"
repository = "https://github.com/jonathandw743/bevy_input_prompts"

[dependencies]
# bevy_asset = "0.16.0"
bevy_input = "0.16.0"
fs_extra = "1.3.0"
kenney_input_prompts = { version = "0.1", features = [
    "use_tokenize_dir",
], optional = true }
tokenize_dir = "0.1"
xelu_free_controller_key_prompts = { version = "0.1", features = [
    "use_tokenize_dir",
], optional = true }

[dev-dependencies]
bevy = "0.16.0"

[features]
default = []
all = ["kenney_input_prompts", "xelu_free_controller_key_prompts"]
