[package]
name = "bevy_input_prompts_macros"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
bit-set = "0.8.0"
fixedbitset = "0.5.7"
flame = "0.2.2"
hashbrown = "0.15.2"
indexmap = "2.9.0"
itertools = "0.14.0"
petgraph = "0.8.1"
proc-macro2 = "1.0.94"
quote = "1.0.40"
syn = "2.0.100"
walkdir = "2.5.0"

[lib]
proc-macro = true
